# llm-council-reloaded

./: .env.example  .gitignore  README.md  TASKS.md  pyproject.toml  run_app.sh
backend/: council.py  main.py  model_catalog.py  prompts_modes.py  settings.py  storage.py
backend/pipelines/: __init__.py  ask.py  base.py  brainstorm.py  debate.py  decide.py  minmax.py
config/: settings.json.example
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: BrainstormOptions.jsx  BrainstormView.jsx  ChatInterface.jsx  DebateOptions.jsx  DebateView.jsx  DecideInputForm.jsx  DecideView.jsx  DeliberationModeSelector.jsx  ExecutionModeToggle.jsx  IdeaCard.jsx  MinmaxView.jsx  ScoreMatrix.jsx  SearchableSelect.jsx  Settings.jsx
frontend/src/styles/: index.css
